# spotify-mcp

./: Cargo.toml  build.rs
migrations/: 20250421124803_create_excluded_artists_table.sql  20250421153231_create_music_genres_table.sql  20250421174738_create_music_search_progresses_table.sql
src/: constant.rs  lib.rs  main.rs  model.rs
src/client/spotify/: v1.rs
src/client/spotify/api/: token.rs
src/client/spotify/v1/: me.rs
src/client/spotify/v1/artists/: top_tracks.rs
src/client/spotify/v1/me/: following.rs
src/client/spotify/v1/me/following/: contains.rs
src/client/spotify/v1/me/player/: play.rs
src/client/spotify/v1/search/: artist.rs
src/constant/: music_search.rs  spotify.rs
src/infrastructure/: database.rs
src/model/: excluded_artist.rs  music_genre.rs  music_search_progress.rs
